2012-04-16  James Robinson  <jamesr@chromium.org>

        [chromium] Convert WebPluginContainerImpl over to use WebExternalTextureLayer
        https://bugs.webkit.org/show_bug.cgi?id=84120

        Reviewed by Adrienne Walker.

        This adds support for IO surface backed WebExternalTextureLayer, used by CoreAnimation plugins on OS X and moves
        some functionality used by multiple WebLayer subclasses up to the base class.

        * chromium/public/WebContentLayer.h:
        (WebContentLayer):
        * chromium/public/WebExternalTextureLayer.h:
        (WebCore):
        (WebExternalTextureLayer):
        * chromium/public/WebLayer.h:
        (WebKit):
        (WebLayer):
        (WebKit::WebLayer::unwrap):

2012-04-17  Dana Jansens  <danakj@chromium.org>

        [chromium] Fix gyp for WebFilterOperation.h and WebFilterOperations.h
        https://bugs.webkit.org/show_bug.cgi?id=84182

        Reviewed by James Robinson.

        * Platform.gypi:

2012-04-16  Kent Tamura  <tkent@chromium.org>

        [Chromium] Fix Chromium-Mac build
        https://bugs.webkit.org/show_bug.cgi?id=80054

        * chromium/public/WebFilterOperations.h:
        (WebKit): WebFilterOperation is a struct, not a class.

2012-04-16  Dana Jansens  <danakj@chromium.org>

        [chromium] Expose compositor filters to Aura through WebLayer
        https://bugs.webkit.org/show_bug.cgi?id=80054

        Reviewed by James Robinson.

        * chromium/public/WebFilterOperation.h: Added.
        (WebKit):
        (WebFilterOperation):
        (WebKit::WebFilterOperation::WebFilterOperation):
        (WebBasicColorMatrixFilterOperation):
        (WebKit::WebBasicColorMatrixFilterOperation::WebBasicColorMatrixFilterOperation):
        (WebBasicComponentTransferFilterOperation):
        (WebKit::WebBasicComponentTransferFilterOperation::WebBasicComponentTransferFilterOperation):
        (WebBlurFilterOperation):
        (WebKit::WebBlurFilterOperation::WebBlurFilterOperation):